--- a/config/content.htm
+++ b/config/content.htm
@@ -850,8 +850,18 @@ var winkVideoData_resolve_conflict = {
 <p><img caption="false" height="347" src="/images/leoSettings.leo_import-xml-tags.png" width="600"/></p>
 <p>在上述 @data import-xml-tags 場景節點的設定下,  import MTB 機械手臂的 Leo Editor 畫面, 分別導入 simple 與 exhaustive 格式的場景.</p>
 <p><img alt="" height="261" src="/images/use_leo_import_simscene.xml.png" width="600"/></p>
-<p></p>
-<p></p><h1>NX</h1>
+<p>除了 Leo Editor 也可以使用 <a href="https://microsoft.github.io/XmlNotepad/">XmlNotepad</a> 編輯 XML 格式場景 (<a href="/downloads/XmlNotepad.7z">XmlNotepad.7z</a>).</p>
+<h3>XML</h3>
+<p>CoppeliaSim 檔案格式:</p>
+<p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> </p>
+<p>UI 圖形介面格式:</p>
+<p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a> </p>
+<p>Collada 輸出入插件:</p>
+<p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/colladaPlugin.htm">https://www.coppeliarobotics.com/helpFiles/en/colladaPlugin.htm</a> </p>
+<p style="padding-left: 30px;">原始碼: <a href="https://github.com/CoppeliaRobotics/simExtCollada">https://github.com/CoppeliaRobotics/simExtCollada</a></p>
+<p><a href="https://wiki.ros.org/urdf">URDF</a> 輸入插件:</p>
+<p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/urdfPlugin.htm">https://www.coppeliarobotics.com/helpFiles/en/urdfPlugin.htm</a> </p>
+<p style="padding-left: 30px;">原始碼: <a href="https://github.com/CoppeliaRobotics/simExtURDF">https://github.com/CoppeliaRobotics/simExtURDF</a></p><h1>NX</h1>
 <p>多重啟動可攜程式與 NX:</p>
 <p>將各 NX 版本的啟動整合至不同的 start.bat 檔案中.</p>
 <p><img alt="" class="add_border" height="315" src="/images/multiple_nx_startup.png" width="300"/></p>
