--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -858,7 +858,10 @@ var winkVideoData_resolve_conflict = {
 <p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm">https://www.coppeliarobotics.com/helpFiles/en/simUI-widgets.htm</a> </p>
 <p>Collada 輸出入插件:</p>
 <p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/colladaPlugin.htm">https://www.coppeliarobotics.com/helpFiles/en/colladaPlugin.htm</a> </p>
-<p style="padding-left: 30px;">原始碼: <a href="https://github.com/CoppeliaRobotics/simExtCollada">https://github.com/CoppeliaRobotics/simExtCollada</a></p><h1>NX</h1>
+<p style="padding-left: 30px;">原始碼: <a href="https://github.com/CoppeliaRobotics/simExtCollada">https://github.com/CoppeliaRobotics/simExtCollada</a></p>
+<p><a href="https://wiki.ros.org/urdf">URDF</a> 輸入插件:</p>
+<p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/urdfPlugin.htm">https://www.coppeliarobotics.com/helpFiles/en/urdfPlugin.htm</a> </p>
+<p style="padding-left: 30px;">原始碼: <a href="https://github.com/CoppeliaRobotics/simExtURDF">https://github.com/CoppeliaRobotics/simExtURDF</a></p><h1>NX</h1>
 <p>多重啟動可攜程式與 NX:</p>
 <p>將各 NX 版本的啟動整合至不同的 start.bat 檔案中.</p>
 <p><img alt="" class="add_border" height="315" src="/images/multiple_nx_startup.png" width="300"/></p>
