--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -699,7 +699,23 @@ var winkVideoData_w10_ssh = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
 <source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div>
-<h3>run_journal</h3>
+<h3>cube</h3>
+<p>以下為採用 NX1980 繪製的正方體零件, 可能原先的繪圖流程是在草圖階段繪圖時並未對長度與寬度設定尺寸, 就直接長出實體, 然後再回到草圖設定尺寸, 因此 Tools -&gt; Expressions 以 p1 定義高度, 而長度則設為 p2, 寬度設為 p3, 在沒有透過 set Expressions 對長度與寬度對應尺寸約束之前, 在 Tools -&gt; Expressions 只能看到 p1, 其實 p2 與 p3 應該已經跟草圖的尺寸綁定, 因此可以透過 NXOpen Python API 程式 對無列出長寬尺寸變數的零件進行操控, 看是否能夠利用 p2 與 p3 變數控制草圖大小.</p>
+<p>以下為設法透過草圖編輯列出尺變數的 Wink 影片:</p>
+<p><a href="/downloads/w10_cube/w10_cube.7z">參考零件.7z</a></p>
+<script>
+var winkVideoData_40923151 = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_40923151" height="630" muted="true" width="1008">
+<source src="/downloads/w10_cube/w10_cube.mp4" type="video/mp4"/></video></div><h3>run_journal</h3>
 <p>若以 NXOpen Python API 為例, 可以安排將 AJAX 送進 Server 的設計變數存為檔案, 然後由 run_journal.exe 執行的 Python 程式讀進設計變數後, 驅動 NX12、NX1980 或 NX2008 後將結果透過 URL 傳回前端瀏覽器端.</p>
 <p>run_journal.exe help:</p>
 <pre class="brush:js;auto-links:false;toolbar:false" contenteditable="false">Usage: run_journal [ -pim ] [ -r=&lt;filename&gt;[,lang=&lt;lang&gt;][,format=&lt;format&gt;] ] [ -profile ] [ -allow_redo ] &lt;journal-file&gt; [ -args .... ]
@@ -824,8 +840,7 @@ def main():
     disp.BatchShade(screenshotPath, 1920, 1080, method)
       
 if __name__ == "__main__":
-    main()</pre>
-<h2>w11 任務</h2>
+    main()</pre><h2>w11 任務</h2>
 <h4>解決協同設計流程中的倉儲衝突</h4>
 <p>當各組學員對組長帳號下的分組倉儲具備協同管理權限後, 各學員可以 git 採非同步協同設計, 對組長帳號下的分組倉儲進行改版, 其間不免要設法以手動方式解決 config/content.htm 動態超文件中的衝突.</p>
 <p>以下影片就是利用動態網頁系統中的 Search 與 Edit All 設法找出帶有衝突起點、中線與衝突終點的超文件範圍, 然後根據協同設計整體需求解決衝突後, 新增、提交並推送新版本.</p>
@@ -847,11 +862,11 @@ var winkVideoData_resolve_conflict = {
 <p>CoppeliaSim 場景可以存為 exhaustive format 與 simple format 等兩種 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">XML 格式</a>的純文字檔案. 意即使用者應該有機會可以根據這兩種 <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">XML 格式</a>中的語法, 透過程式方法建立所需的模擬場景.</p>
 <p>假如希望利用 Leo Editor 處理 CoppeliaSim <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">XML 格式</a>場景, 可以參考<a href="https://groups.google.com/g/leo-editor/c/kgwfUHJdM1s">這裡</a>的說明. 將 CoppeliaSim <a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">XML 格式</a>的純文字文字場景 import 進入 Leo Editor 編輯環境.</p>
 <p>Leo Editor File -&gt; Import Files 可以導入 .simscene.xml 場景檔案, 但解讀 XML 節點的設定位於 Leo Editor 系統 Settings -&gt; LeoSettings.leo 檔案中的 @data import-xml-tags. 下列設定以 CoppeliaSim, environment, dynamics, simulation, camera, dummy, shape 與 mesh 作為第一階節點 tags.</p>
+<p>@data import-xml-tags 也可以放在各 Leo Editor 專案檔案中的 ＠settings 節點下, 設定完成存檔後, 重新開啟已經設定 @data import-xml-tags 的專案檔, 即可利用 Import Files 輸入 .simscene.xml 檔案之後, 根據 import-xml-tags 中的 tag 設定解讀 .xml 中的內容.</p>
 <p><img caption="false" height="347" src="/images/leoSettings.leo_import-xml-tags.png" width="600"/></p>
 <p>在上述 @data import-xml-tags 場景節點的設定下,  import MTB 機械手臂的 Leo Editor 畫面, 分別導入 simple 與 exhaustive 格式的場景.</p>
 <p><img alt="" height="261" src="/images/use_leo_import_simscene.xml.png" width="600"/></p>
-<p>除了 Leo Editor 也可以使用 <a href="https://microsoft.github.io/XmlNotepad/">XmlNotepad</a> 編輯 XML 格式場景 (<a href="/downloads/XmlNotepad.7z">XmlNotepad.7z</a>).</p>
-<h3>XML</h3>
+<p>除了 Leo Editor 也可以使用 <a href="https://microsoft.github.io/XmlNotepad/">XmlNotepad</a> 編輯 XML 格式場景 (<a href="/downloads/XmlNotepad.7z">XmlNotepad.7z</a>).</p><h3>XML</h3>
 <p>CoppeliaSim 檔案格式:</p>
 <p style="padding-left: 30px;"><a href="https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm">https://www.coppeliarobotics.com/helpFiles/en/xmlFormat.htm</a> </p>
 <p>UI 圖形介面格式:</p>
